Fix NavBar aligning + add animated icons

--- a/style.CSS
+++ b/style.CSS
@@ -9,32 +9,64 @@
 .item7 { grid-area: justBottom;}
 .item8 { grid-area: footer; }
 
+.grid-container>.item1
+{
+  text-align: left;
+  position: absolute;
+  width: 100%;
+  height: 23%;
+  margin-top: -2.7%;
+  backdrop-filter: blur(7px);
+  background-color:black;
+  z-index: 1;
+  position: fixed;
+  font-size: 4vw;
+  word-spacing: 1vw;
+  text-transform: capitalize;
 
+}
+
+.headline>a
+{
+  font-size: 2vw;
+  color: white;
+  font-family: fantasy;
+  text-shadow: 3px 0 0 #000, 0 -3px 0 #000, 0 3px 0 #000, -3px 0 0 #000;
+}
+.headline>a:hover
+{
+  color: rgb(177, 177, 177);
+  font-family: fantasy;
+}
+.headline>a:active
+{
+  color:rgba(75, 75, 75, 0.679);
+  font-family: fantasy;
+}
 .body
 {
   font-family: 'Exo', sans-serif;
   display: inline;
 }
 
-img
+#personIcon, #mailIcon,#creditIcon, #dateIcon,#phoneIcon
+{
+  width: 30px;
+}
+.profile
 {
   height: 10vw;
   width: auto;
   border-radius: 50%;
   box-shadow: 0.5vw 0.5vw 1vw rgba(0, 0, 0, 0.6);
 }
+#logo
+{
+  height:7vw;
+  width: auto;
+  border-radius: 1vw;
+}
 
-.grid-container>.item1
-{
-  height: 2vw;
-}
-.grid-container>.item1>.headline
-{
-  margin-left: -75%;
-  font-size: 4vw;
-  word-spacing: 1vw;
-  text-transform: capitalize;
-}
 .grid-container>.item2,
 .grid-container>.item4>p,
 .grid-container>.item5>p,
@@ -46,7 +78,6 @@ img
 .grid-container>.item5,
 .grid-container>.item6
 {
-  
   border-style:groove;
   border-radius: 10%;
   margin-top: 2vw;
@@ -66,7 +97,6 @@ img
   width: 25vw;
   margin-right: 10vw;
 }
-
 h1
 {
   font-size: 3vw;
@@ -100,23 +130,23 @@ a{
   border-width: 0.2vw;
   border-style: inset;
 }
-
-
 .grid-container>.item2, .grid-container>.item3
 {
   color: white;
   background-image: url("blame.jpg");
   background-attachment: fixed;
-  margin-top: 3vw;
+  margin-top: 4.5vw;
   background-size: 100%;
   background-repeat: no-repeat;
   font-size: 1.5vw;
   padding:2vw;
+  padding-bottom: 5vw;
 }
 
 .grid-container>.item2>.content1
 {
-  margin: auto;
+  margin-top: 10%;
+  margin-right: auto;
   backdrop-filter: blur(0.7vw);
   background-color: none;
   box-shadow: 2vw 2vw 2vw 1.5vw rgba(0, 0, 0, 0.39);
@@ -129,9 +159,11 @@ a{
 }
 .grid-container>.item3>.content2
 { 
-  margin: auto;
+  margin-top: 10%;
+  text-align: left;
+  margin-right: auto;
   width: 70% ;
-  padding: 1vw;
+  padding-left: 5vw;
   backdrop-filter: blur(0.7vw);
   box-shadow: 2vw 2vw 2vw 1.5vw rgba(0, 0, 0, 0.39);
   text-shadow: 0.7vw 0.7vw 0.7vw rgba(64, 64, 64, 0.96);
@@ -170,22 +202,25 @@ input, #Countries
 {
   padding-left: 0.7vw;
   text-align: left;
-  width: 28%;
+  width: 33%;
   border-style:none;
 }
 
 #email, #credit
 {
-
-  width: 60%;
+  width: 70%;
 }
 #phone
 {
-  width: 25%;
+  width: 40%;
+}
+#date
+{
+  width: 42%;
 }
 #secure
 {
-  width: 12%;
+  width: 20%;
 }
 
 button
@@ -201,7 +236,7 @@ button
   border-radius: 0.5vw;
   border-style: outset;
   outline: none;
-
+  margin-left: 27%;
 }
 button:hover
 {
@@ -229,6 +264,7 @@ button:active, #date:active
   background-color: rgba(255, 255, 255, 0.301);
   border-style: inset;
 }
+
     .grid-container {
         display: grid;
         grid-template-areas:
@@ -256,39 +292,63 @@ button:active, #date:active
 
             padding: 10px;
           }
-              .grid-container>.item1>.headline
+  
+              .grid-container>.item1
               {
-                margin-left: -65%;
-                font-size: 7vw;
+                padding-top: 4%;
+                height: 2%;
+                width: 100%;
+                text-align: center;
+                /* margin-top: -14%; */
+                margin-left: -2.5%;
               }
-              .grid-container>.item2
+
+              .grid-container>.item1>.headline>a
               {
+                font-size:1.7vw;
+              }
+              .grid-container>.item2,.grid-container>.item2>.content1
+              {
+                /* margin-top: 18%; */
                 margin-left: 0;
-                box-shadow: none;
               }
+              .grid-container>.item3
+              {
+                margin-top: -2vw;
+              } 
               .grid-container>.item2>.content1, .grid-container>.item7>.content3
               {
                 background-color: rgba(68, 68, 68, 0.511);
-
               }
               .grid-container>.item2>.content1,.grid-container>.item3>.content2
               {
-                /* margin-left: 25%; */
                 width: 100%;
+                border-radius: 5px;
               }
-              .grid-container>.item2>.content1>p, .grid-container>.item3>.content2>p
+              .grid-container>.item2>.content1>p, .grid-container>.item3>.content2>p,h3
               {
+                text-align: center;
                 font-size: 4vw;
+              }
+
+              #personIcon,#mailIcon,#creditIcon,#dateIcon,#phoneIcon
+              {
+                margin-left: 10%;
+              }
+              #email,#credit
+              {
+                width: 10px;
               }
               .grid-container>.item3>.content2>button
               {
+                margin-left: 40%;
                 text-align: center;
                 width: 15%;
                 border-style:none;;
               }
               #email, #credit
               {
-                width: 40%;
+                width: 65%;
               }
               #secure
               {
@@ -302,13 +362,15 @@ button:active, #date:active
               {
                 font-size: 2vw;
               }
-              .grid-container>.item3
+              #personIcon, #mailIcon,#creditIcon, #dateIcon,#phoneIcon
               {
-                margin-right: 0;
-                box-shadow: none;
-                margin-top: -2vw;
-              } 
-              
+                font-size: 4vw;
+              }
+              button
+              {
+                margin-top: 10px;
+              }
+
               .grid-container>.item1>p, 
               .grid-container>.item2>p,
               .grid-container>.item4>p,
@@ -323,15 +385,16 @@ button:active, #date:active
               {
                 font-size: 30px; 
               }
+ 
               .grid-container>.item2, .grid-container>.item3
               {
                 background-size: 150%;
-                background-position-y: 100px;
+                background-position-y: 15%;
               }
               .grid-container>.item7
               {
                 margin-top: 15vw;
-                background-position-y: 410px;
+                background-position-y: 80%;
               }
               .grid-container>.item7>.content3
               {
